[tool.poetry]
name = "reservoirpy"
version = "0.1.0"
description = "Oil&Gas Reservoir Engineering Workflows"
authors = ["Santiago Cuervo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scipy = "^1.6.1"
lasio = "^0.28"
geopandas = "^0.9.0"
pyvista = "^0.28.1"
Shapely = "^1.7.1"
folium = "^0.12.1"
scikit-image = "^0.18.1"
zmapio = "^0.6.0"
statsmodels = "^0.12.2"
SQLAlchemy = "^1.3.23"
pyDOE2 = "^1.3.0"
psycopg2-binary = "^2.8.6"
pydantic = "^1.8"

[tool.poetry.dev-dependencies]
notebook = "^6.2.0"
ipykernel = "^5.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
